Fix website spacing

--- a/css/main.css
+++ b/css/main.css
@@ -297,7 +297,7 @@ footer {
     position: absolute;
     display: flex;
     width: 200px;
-    right: 120px;
+    right: 90px;
     top: 0;
     padding: .2em;
     visibility: visible;
@@ -327,6 +327,7 @@ footer {
   .location .map-img {
     width: 300px;
     right: 200px;
+    top: -25%;
   }
 
 }
